syntax = "proto3";

option go_package = "pkg/schedule";

package schedule;

import "google/api/annotations.proto";

service Schedule {
  rpc CreateTask (CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/v1/tasks"
      body: "*"
    };
  };
  rpc GetDaySchedule (GetDayScheduleRequest) returns (GetDayScheduleResponse) {
    option (google.api.http) = {
      get: "/v1/day-schedule"
    };
  };
  rpc GetTask (GetTaskRequest) returns (GetTaskResponse) {
    option (google.api.http) = {
      get: "/v1/get-task"
    };
  };
}

message CreateRequest{
  string description = 1;
  int32 priority = 2;
  string deadline = 3;
}

message CreateResponse{}

message GetDayScheduleRequest{}

message GetDayScheduleResponse{}

message GetTaskRequest {}

message GetTaskResponse{}
